--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description" content="Explore Zafir's multifaceted journey through speaking, sports, essays, and career milestones in this cinematic Netflix-style portfolio experience." />
     <meta name="author" content="Zafir Main" />
     <meta name="keywords" content="portfolio, professional, netflix-inspired, tech, speaking, sports, essays, career, microsoft, ai, tamil" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
 
     <meta property="og:title" content="Zafir's Professional Catalogue | Netflix-Inspired Portfolio" />
     <meta property="og:description" content="Explore Zafir's multifaceted journey through speaking, sports, essays, and career milestones in this cinematic Netflix-style portfolio experience." />
