--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <meta name="keywords" content="portfolio, professional, netflix-inspired, tech, speaking, sports, essays, career, microsoft, ai, tamil" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./favicon.svg" />
 
     <meta property="og:title" content="Zafir's Professional Catalogue | Netflix-Inspired Portfolio" />
     <meta property="og:description" content="Explore Zafir's multifaceted journey through speaking, sports, essays, and career milestones in this cinematic Netflix-style portfolio experience." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/placeholder.svg" />
+    <meta property="og:image" content="./placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Zafir's Professional Catalogue" />
     <meta name="twitter:description" content="A cinematic Netflix-style portfolio showcasing professional journey and achievements" />
-    <meta name="twitter:image" content="/placeholder.svg" />
+    <meta name="twitter:image" content="./placeholder.svg" />
   </head>
 
   <body>
